--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo_titulo">Eleve seu negócio digital a outro nível<strong class="titulo-destaque"> com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo_texto">Olá! Sou Joana , desenvolvedora Front-end com especialidade em <strong class="paragrafo-destaque"> React, HTML e Css </strong>. Ajudo pequenos negócios e designer a prática boas idéias. vamos conversar? </p>
+            <p class="apresentacao__conteudo_texto">Olá! Sou Cristiano Sato , desenvolvedor Front-end com especialidade em <strong class="paragrafo-destaque"> React, HTML e Css </strong>. Ajudo pequenos negócios e designer a prática boas idéias. vamos conversar? </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/cristianosato">
